--- a/atari/doc/faq.txt
+++ b/atari/doc/faq.txt
@@ -1,14 +1,15 @@
 
 NETSURF ATARI FAQ
 
-Date: 15.02.2011
+Date: 12.04.2012
 
 01.) CAN NETSURF ALSO BE RUN WITHIN AN TOS ENVIRONMENT?
 02.) I DON'T HAVE AN 15 BIT GRAPHICS CARD, HOW TO RUN NETSURF ANYWAY?
 03.) WHEN I WANT TO RUN NETSURF IT SAYS: "SOCKET NOT CONNECTED".
 04.) I'M GETTING "INSUFFICENT MEMORY" MESSAGES WHEN RUNNING NETSURF.
+05.) SSL DOES NOT WORK - WHAT'S WRONG?
+06.) I'M GETTING THE ERROR: "BASE STYLESHEET FAILED TO LOAD" - WHAT'S WRONG?
 05.) A PAGE CRASHES - WHAT CAN I DO?
-06.) SSL DOES NOT WORK - WHAT'S WRONG?
 
 1.) Question:
     CAN NETSURF ALSO BE RUN WITHIN AN TOS ENVIRONMENT?
@@ -60,3 +61,14 @@ Date: 15.02.2011
     Try to move the shipped cabundle.crt file to the path where NetSurf
     looks for the SSL certificates (Displayed within statusbar and also
     verbose log).
+
+6.) Question:
+	I'M GETTING THE ERROR: "BASE STYLESHEET FAILED TO LOAD" - WHAT'S WRONG?
+
+	Answer:
+	NetSurf checks if the base stylesheet is modified. For that - it
+	requires that the system clock is returning reasonable valid values.
+	Make your your system clock is set. (Rember empty NVRAM....)
+	If that doesn't help - make sure the netsurf package was unpacked
+	completly and that all files can be read.
+
